# system-design

./: Cargo.toml  README.md  index.html
src/: app.rs  dark_mode.rs  error_template.rs  lib.rs  main.rs  two_phase_commit.rs
src/components/: compute_component.rs  mod.rs
src/graphics/: arrow_head.rs  circle_tag.rs  dom_position.rs  geo_hash.rs  mod.rs
src/model/: arrow.rs  compute.rs  geo_hash.rs  mod.rs  node_hashing.rs
src/topic/: mod.rs  scenario.rs
src/topic/client_server/: mod.rs
src/topic/consistent_hashing/: circle_distribution.rs  initial_setup.rs  mod.rs  perfec_scenario.rs  perfect_scenario.rs  problem_scenario.rs  uneven_scenario.rs
src/topic/geo_hash/: mod.rs
src/topic/two_phase/: all_good_scenario.rs  client_deny_scenario.rs  mod.rs  one_client_down.rs  server_down.rs  two_phase_commit.rs
src/topic/uber/: entity.rs  mod.rs  uber_component.rs
src/topic/util/: mod.rs  position_holder.rs
src/two_phase/: all_good_scenario.rs  mod.rs  two_phase_commit.rs
style/: main.css  main.scss
